# devilray-sui

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  dex_integration.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  OPERATIONS.md  README.md  ROADMAP.md  ROUTING_PERFORMANCE.md
src/: daemon.rs  dex_swap.rs  lib.rs  main.rs  models.rs  queue.rs  router.rs  slippage.rs  sui_client.rs  sui_int.rs  transaction_builder.rs
src/api/: info.rs  metrics.rs  mod.rs  quote.rs  websocket.rs
src/collectors/: cetus.rs  fee_growth_fixtures.rs  magma.rs  mod.rs  momentum.rs  tick_fetch.rs  turbos.rs
src/discovery/: event_parser.rs  fixtures.rs  graphql.rs  mod.rs  object_parser.rs  progress.rs  registry.rs  scanner.rs
src/storage/: clickhouse_storage.rs  mod.rs  postgres.rs  redis.rs
src/workers/: db_writer.rs  dynamic_worker.rs  mod.rs  static_worker.rs
tests/: integration_postgres.rs  integration_redis.rs  integration_writer.rs
